rmb-parser/src/snapshots/parser__expression__tests__immutable_constant.snap
---
source: parser/src/expression.rs
expression: variables_ast
---
Var {
    mutable: false,
    name: "hello",
    value: BinaryOp {
        operator: Plus,
        lhs: UintLiteral {
            value: 1,
            size: None,
            location: Location {
                start_byte: 14,
                end_byte: 15,
            },
        },
        rhs: BinaryOp {
            operator: Star,
            lhs: UintLiteral {
                value: 2,
                size: None,
                location: Location {
                    start_byte: 18,
                    end_byte: 19,
                },
            },
            rhs: UintLiteral {
                value: 3,
                size: None,
                location: Location {
                    start_byte: 22,
                    end_byte: 23,
                },
            },
            location: Location {
                start_byte: 18,
                end_byte: 23,
            },
        },
        location: Location {
            start_byte: 14,
            end_byte: 23,
        },
    },
    location: Location {
        start_byte: 0,
        end_byte: 23,
    },
}
